# school-sync

./: .env.example  .gitignore  README.md  pyproject.toml  state.py
school_sync/: __main__.py  config.py  drive.py  main.py  models.py  state.py
school_sync/sources/: brightspace.py  gradescope.py
school_sync/targets/: notion.py  openclaw.py
sources/: gradescope.py
targets/: notion.py  openclaw.py
