[project]
name = "school-sync"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "gradescopeapi @ git+https://github.com/nyuoss/gradescope-api",
]

[project.scripts]
school-sync = "school_sync.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
